fix footer layout issues on narrow screens
fixes #30

--- a/yakbak/static/site.css
+++ b/yakbak/static/site.css
@@ -1,15 +1,11 @@
 /* sticky footer bootstrap template */
-html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  margin-bottom: 60px;
+.main-container {
+  min-height: 85vh;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
-  height: 60px;
-  line-height: 60px;
+  padding: 20px 0;
+}
+.footer div p:last-child {
+  margin-bottom: 0;
 }
